--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
       </h1>
     </div>
     <div class="container" style="padding: 0px;">
-      <div class="col-sm-12" style="padding: 0px;">
-        <figure class="figure"><img alt="An image of agriculture on an alluvial fan in southeastern Iran." class="img-fluid" src="images/iran-alluvialfan.jpg" style="max-width: 100%;"><figcaption class="figure-caption text-right">
+      <div style="padding: 0px;">
+        <figure class="figure" style="display:block; text-align: center;">
+          <img alt="An image of agriculture on an alluvial fan in southeastern Iran." class="img-fluid" src="images/iran-alluvialfan.jpg" style="max-width: 100%;">
+          <figcaption class="figure-caption">
             Fars Province, Iran. October 12, 2004. (NASA/Jesse Allen, NASA/GSFC/METI/ERSDAC/JAROS, U.S./Japan ASTER Science Team)
           </figcaption></figure>
 </div>
